infrastructure/impact-graph-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: impact-graph-deployment
spec:
  selector:
    matchLabels:
      app: impact-graph
  replicas: 1
  template:
    metadata:
      labels:
        app: impact-graph
    spec:
      containers:
        - name: impact-graph
          image: gaiagivescr.azurecr.io/impact-graph
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /app/utils/public/applications
              name: impact-graph-data
              subPath: applications
      volumes:
        - name: impact-graph-data
          persistentVolumeClaim:
            claimName: impact-graph-data-disk
