infrastructure/postgres-test-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-test-deployment
spec:
  selector:
    matchLabels:
      app: postgres-test
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-test
    spec:
      containers:
        - name: postgres
          image: postgres:13
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-test-data
              subPath: data
      volumes:
        - name: postgres-test-data
          persistentVolumeClaim:
            claimName: postgres-test-data-disk
