infrastructure/impact-graph-service.yml
apiVersion: v1
kind: Service
metadata:
  name: impact-graph-service
spec:
  type: ClusterIP
  ports:
    - port: 4000
      protocol: TCP
  selector:
    app: impact-graph
