infrastructure/postgres-test-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-test-service
spec:
  type: ClusterIP
  ports:
    - port: 5432
      protocol: TCP
  selector:
    app: postgres-test
