infrastructure/impact-graph-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: impact-graph-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: gaia-gives.westeurope.cloudapp.azure.com
      http:
        paths:
          - pathType: Prefix
            path: /graphql
            backend:
              service:
                name: impact-graph-service
                port:
                  number: 4000
